[project]
name = "weatherchecker"
version = "0.1.0"
description = ""
authors = [
    {name = "Orit Padawer",email = "108684891+OritPa@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)",
    "streamlit-folium (>=0.25.1,<0.26.0)",
    "plotly (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "weatherchecker" }]
